# django-ninja-cursor-pagination

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml
ninja_cursor_pagination/: __init__.py  _cursor.py
tests/: manage.py  test_cursor.py  test_cursor_pagination.py
tests/demo_project/demo/: settings.py  urls.py
tests/demo_project/someapp/: api.py  models.py
tests/test_app/: api.py  settings.py  urls.py
